--- a/dom/style.css
+++ b/dom/style.css
@@ -18,14 +18,21 @@ html, body{
     height: 400px;
     background-color: rgb(245, 5, 5);
     padding: 5px;
-   
+   border-radius: 8px;
+    border: 3px solid white;
 }
 button{
-    padding: 5px;
+    padding: 15px;
     border: none;
     background-color: crimson;
     color: white;
     font-size: 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 500px;
+   
 
-
+}
+button:active{
+    scale: 0.95;
 }
